# lebrely-backend

./: .gitignore  README.md  docker-compose.yml  init.sql  pyproject.toml
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 8d5687d03619_add_supabase_user_id_and_timestamps_to_.py  d6d05852b462_initial_migration_create_users_table.py
src/app/: main.py
src/app/api/v1/endpoints/: auth.py  users.py
src/app/core/: auth.py  config.py
src/app/db/: database.py
src/app/models/: user.py
src/app/schemas/: auth.py  user.py
src/app/services/: auth.py  user.py
